updated index file

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         <section>
             <div class="end">
                 <ul>
+                <li><a href="location.html">
                     <li><a href="privacypolicy.html">Privacy Policy</a></li>
                     <li><a href="terms.html">Terms and Conditions</a></li>
                     <li><a href="accessibility.html">Accessibility</a></li>
